<resources>
    <string name="app_name">CP282 Final</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_notebooks">Notebooks</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_tags">Tags</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about">About</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Notebooks</item>
        <item>Categories</item>
        <item>Tags</item>
    </string-array>

    <string-array name="nav_item_list">
        <item>HOME</item>
        <item>NOTES</item>
        <item>ARCHIVE</item>
        <item>TRASH</item>
        <item>UNCATEGORIZED</item>
        <item>CATEGORY</item>
    </string-array>

    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_contact">Contact</string>
    <string name="activity_title_about">About</string>
    <string name="storage_not_available">Storage not available</string>

    <!-- Note Text -->
    <string name="fragment_note_title">Title</string>
    <string name="fragment_note_content">Content</string>
    <string name="fragment_note_tags">Tags</string>

    <!-- Categories Fragment -->
    <string name="categories_fragment_title">Categories</string>

    <!-- Notebook Fragment -->
    <string name="notebook_fragment_title">Notebooks</string>

    <!-- Tag Fragment -->
    <string name="tags_fragment_title">Tags</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Enter home display</string>

    <!-- Login/Register Activity -->
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="txtEmail">Email</string>
    <string name="txtPhone">Phone</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnBackToLogin">Back to Login</string>

    <!-- Contact Activity -->
    <string name="title_activity_contact">Contact</string>
    <string name="name_activity_contact">Name</string>
    <string name="email_activity_contact">Email</string>
    <string name="phone_activity_contact">Phone</string>
    <string name="message_activity_contact">Your message…</string>
    <string name="submit_activity_contact">Submit</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
