<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_navigation_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_notebooks"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_notebooks" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/nav_tags" />
    </group>
    <group
        android:id="@+id/nav_about_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_sub_contact"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_sub_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_about" />
    </group>
</menu>